setup bottom bar

--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_nav"
-    app:startDestination="@id/fragmentLogin"
+    app:startDestination="@id/fragmentHome"
     >
 
     <fragment
@@ -20,6 +20,12 @@
         android:id="@+id/fragmentHome"
         android:name="com.yudhistiroagung.mockva.ui.home.HomeFragment"
         tools:layout="@layout/fragment_home"
+        />
+
+    <fragment
+        android:id="@+id/fragmentAccount"
+        android:name="com.yudhistiroagung.mockva.ui.account.AccountFragment"
+        tools:layout="@layout/fragment_account"
         />
 
 </navigation>
