--- a/app/src/main/res/menu/app_bottom_menu.xml
+++ b/app/src/main/res/menu/app_bottom_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/fragmentHome"
         android:icon="@drawable/ic_menu_home"
-        android:title="Dashboard" />
+        android:title="Home" />
     <item
         android:id="@+id/fragmentAccount"
         android:icon="@drawable/ic_account"
