create splash and navigate to login page after 3 seconds

--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -3,8 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_nav"
-    app:startDestination="@id/fragmentLogin"
+    app:startDestination="@id/fragmentSplash"
     >
+
+    <fragment
+        android:id="@+id/fragmentSplash"
+        android:name="com.yudhistiroagung.mockva.ui.splash.SplashFragment"
+        tools:layout="@layout/fragment_splash"
+        >
+        <action
+            android:id="@+id/actionSplashToLoginFragment"
+            app:destination="@+id/fragmentLogin" />
+    </fragment>
 
     <fragment
         android:id="@+id/fragmentLogin"
