--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,21 +3,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/txt_login_title"
-        android:text="LOGIN FRAGMENT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
         android:layout_centerInParent="true"
-        />
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:text="LOGIN"
-        android:layout_below="@+id/txt_login_title"
-        android:layout_centerInParent="true"
-        />
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/editTextTextEmailAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/editTextTextPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginVertical="16dp"
+            android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="LOGIN"
+            />
+
+    </LinearLayout>
+
+
+
+
+
 
 
 </RelativeLayout>
